First post edit

--- a/data/blog/hello-my-name-is.mdx
+++ b/data/blog/hello-my-name-is.mdx
@@ -15,6 +15,6 @@ Life wasn't supposed to go this way. I was supposed to have kids, be a part-time
 
 A trusted friend pointed me towards Flatiron School's Software Engineering bootcamp. 15 weeks and then employable in this new chosen field? Sure, why not. You can do anything for 15 weeks.
 
-Well, you might not be able to do ANYTHING for 15 weeks, but it seems like I can do THIS. My overachieving brain has found its place. After years of making things - be it in the kitchen, garden, graphic design, photography, crafts - I found something new to build. It might not be tangible, but it's still scratching that itch I have for creating every day.
+Well, you might not be able to do ANYTHING for 15 weeks, but it seems like I can do THIS. My overachieving brain has found its place. After a lifetime of making things - be it in the kitchen, garden, graphic design, photography, crafts - I found something new to build. It might not be tangible, but it's still scratching that itch I have for creating every day.
 
 As of today, I've successfully made it through 3 of 5 bootcamp phases. It hasn't been easy, but there is a supportive community I didn't expect. And it's amazing to feel my brain working, to focus on something positive. As there's no alternative, I'm going to be a developer whether I like it or not.
