--- a/data/blog/workspace.mdx
+++ b/data/blog/workspace.mdx
@@ -41,20 +41,52 @@ As a side goal, from the start of my Flatiron life, I wanted to connect each pha
   - Integrated Unsplash stock photo search
   - Add search results to personal catalog and projects
 
-User authentication is handled by BCrypt. It's easy to create a new account on the signup page. Signing in takes you to the profile page, which acts as a sort of dashboard with quick links to related projects and Toolkit features.
+## Login / Sign up & User Profile
+
+![Login form](/static/images/workspace/login-signup.gif)
+
+User authentication is handled by **BCrypt**. It's easy to create a new account on the signup page. Signing in takes you to the **Profile** page, which acts as a sort of dashboard with quick links to related projects and **Toolkit** features.
+
+## Catalog View
 
 The main catalog is a collection of all the user's existing projects and assets. To create a new project or upload a new asset, use the links from the nav bar at the top of the page.
 
-Individual projects display related information at the top, with included assets below. To update project info, Click Update Project, fill out the form, and click submit to see the changes automatically. You can also easily delete the project and it will not delete the related assets from the catalog.
+![Catalog view](/static/images/workspace/catalog.gif)
+
+## Project View
+
+Individual projects display related information at the top, with included assets below. To update project info, click Update Project, fill out the form, and click submit to see the changes automatically. You can also easily delete the project and it will not delete the related assets from the catalog.
+
+![Project view](/static/images/workspace/catalog-project-02.jpg)
+
+## Image Asset View
 
 Individual image assets display related information at the top, followed by links to associated projects. If the asset is not included in a project, it can be added from the dropdown menu of available projects. You can easily update asset data or delete the record, similar to project update and delete.
 
+![Image view](/static/images/workspace/catalog-asset.jpg)
+
+## Toolkit
+
 **Toolkit** is a resource area. Currently, there are color, image, and photo search components.
+
+### Hex Color Resource
 
 The **Color** section, aka my Flatiron Phase 1 project, includes information on using hexadecimal colors in your design. You can use the color picker to find a hex value, then generate various color schemes to work with. You may then grab the hex or RGB values to use in your CSS.
 
+![Color resource](/static/images/workspace/toolkit-colors.gif)
+
+### CSS Image Styling
+
 The **Images** section, or my Flatiron Phase 2 project, dives into how to use CSS in styling images. There are photo examples of different styles with the CSS code snippets below. Utilizing these are a much easier way to transform images than using Photoshop to manipulate or create a new image for each desired effect. The above examples all use the same image, so only one image had to be uploaded and stored.
 
+![CSS Image Styling view](/static/images/workspace/toolkit-image.jpg)
+
+### Unsplash Photo Search
+
 The last Toolkit feature is a photo search using the Unsplash photo archive API. After you search for an image, you can add a result to your catalog, and then include in a project.
+
+![Unsplash photo search view](/static/images/workspace/toolkit-unsplash.jpg)
+
+## Conclusion
 
 Stretch goals for Workspace include a catalog search and filter, the option to upload more than image files, i.e. PDFs, and also the ability to take notes within the Toolkit features and add the note or code snippet to a project.
