Add GitHub link to Workspace post

--- a/data/blog/projects/workspace.mdx
+++ b/data/blog/projects/workspace.mdx
@@ -1,13 +1,23 @@
 ---
 title: Workspace
 date: '2023-01-03'
-tags: ['Flatiron', 'project']
+tags: ['Flatiron', 'project', 'React', 'Ruby on Rails']
 draft: false
 summary: Flatiron School Software Engineering Program Final Project
 images: []
 layout: PostLayout
 canonicalUrl:
 ---
+
+### **[View on GitHub](https://github.com/kkochie/design-workspace/)**
+
+### **[View quick walkthrough video on Loom](https://loom.com/share/e36d19a001454030a145b3553132a67d/)**
+
+#### &nbsp;
+
+---
+
+![Workspace Overview](/static/images/projects/workspace/workspace-overview.gif)
 
 Having worked in the design field for many years, I know firsthand how frustrating it can be to keep track of the various pieces needed for one project, let alone multiple projects. A dedicated "workspace" would be very helpful. I decided to tackle this for my Flatiron School capstone project.
 
@@ -43,7 +53,7 @@ As a side goal, from the start of my Flatiron life, I wanted to connect each pha
 
 ## Login / Sign up & User Profile
 
-![Login form](/static/images/workspace/login-signup.gif)
+![Login form](/static/images/projects/workspace/login-signup.gif)
 
 User authentication is handled by **BCrypt**. It's easy to create a new account on the signup page. Signing in takes you to the **Profile** page, which acts as a sort of dashboard with quick links to related projects and **Toolkit** features.
 
@@ -51,19 +61,19 @@ User authentication is handled by **BCrypt**. It's easy to create a new account 
 
 The main catalog is a collection of all the user's existing projects and assets. To create a new project or upload a new asset, use the links from the nav bar at the top of the page.
 
-![Catalog view](/static/images/workspace/catalog.gif)
+![Catalog view](/static/images/projects/workspace/catalog.gif)
 
 ## Project View
 
 Individual projects display related information at the top, with included assets below. To update project info, click Update Project, fill out the form, and click submit to see the changes automatically. You can also easily delete the project and it will not delete the related assets from the catalog.
 
-![Project view](/static/images/workspace/catalog-project-02.jpg)
+![Project view](/static/images/projects/workspace/catalog-project-02.jpg)
 
 ## Image Asset View
 
 Individual image assets display related information at the top, followed by links to associated projects. If the asset is not included in a project, it can be added from the dropdown menu of available projects. You can easily update asset data or delete the record, similar to project update and delete.
 
-![Image view](/static/images/workspace/catalog-asset.jpg)
+![Image view](/static/images/projects/workspace/catalog-asset.jpg)
 
 ## Toolkit
 
@@ -73,19 +83,19 @@ Individual image assets display related information at the top, followed by link
 
 The **Color** section, aka my Flatiron Phase 1 project, includes information on using hexadecimal colors in your design. You can use the color picker to find a hex value, then generate various color schemes to work with. You may then grab the hex or RGB values to use in your CSS.
 
-![Color resource](/static/images/workspace/toolkit-colors.gif)
+![Color resource](/static/images/projects/workspace/toolkit-colors.gif)
 
 ### CSS Image Styling
 
 The **Images** section, or my Flatiron Phase 2 project, dives into how to use CSS in styling images. There are photo examples of different styles with the CSS code snippets below. Utilizing these are a much easier way to transform images than using Photoshop to manipulate or create a new image for each desired effect. The above examples all use the same image, so only one image had to be uploaded and stored.
 
-![CSS Image Styling view](/static/images/workspace/toolkit-image.jpg)
+![CSS Image Styling view](/static/images/projects/workspace/toolkit-image.jpg)
 
 ### Unsplash Photo Search
 
 The last Toolkit feature is a photo search using the Unsplash photo archive API. After you search for an image, you can add a result to your catalog, and then include in a project.
 
-![Unsplash photo search view](/static/images/workspace/toolkit-unsplash.jpg)
+![Unsplash photo search view](/static/images/projects/workspace/toolkit-unsplash.jpg)
 
 ## Conclusion
 
