Add tags to existing posts

--- a/data/blog/guides/dont-forget-where-you-started.mdx
+++ b/data/blog/guides/dont-forget-where-you-started.mdx
@@ -1,7 +1,7 @@
 ---
 title: Don't Forget Where You Started
 date: '2022-09-14'
-tags: []
+tags: ['HTML', 'basics', 'guide']
 draft: false
 summary: HTML Best Practices
 images: []
