--- a/data/blog/lists/dime-a-dozen-or-not.mdx
+++ b/data/blog/lists/dime-a-dozen-or-not.mdx
@@ -1,7 +1,7 @@
 ---
 title: Dime a Dozen, or Not
 date: '2022-09-14'
-tags: []
+tags: ['services', 'hosting', 'stack']
 draft: false
 summary: Let's put this ol' adage to test and check out some free web hosting.
 images: []
