--- a/data/blog/guides/homebrew-club.mdx
+++ b/data/blog/guides/homebrew-club.mdx
@@ -1,7 +1,7 @@
 ---
 title: Homebrew Club
 date: '2022-09-12'
-tags: []
+tags: ['services', 'basics', 'guide']
 draft: false
 summary: Homebrew makes package management go down smooth.
 images: []
