--- a/data/blog/hello-my-name-is.mdx
+++ b/data/blog/hello-my-name-is.mdx
@@ -1,7 +1,7 @@
 ---
 title: Hello, My Name Is...
 date: '2022-08-09'
-tags: ['about']
+tags: ['about', 'general']
 draft: false
 summary: A quick intro about why I decided to go to a tech bootcamp.
 images: []
