Update Projects page

--- a/data/blog/projects/anthony-parisi-site.mdx
+++ b/data/blog/projects/anthony-parisi-site.mdx
@@ -13,7 +13,7 @@ canonicalUrl:
 
 #### &nbsp;
 
-I had the opportunity to build a custom WordPress site for a local candidate for district attorney. The main objectives were to introduce him to the county, provide an easy way to sign up to volunteer and donation call to action (CTA).
+I had the opportunity to build a custom WordPress site for a local candidate for District Attorney. The main objectives were to introduce him to the county, provide an easy way to sign up to volunteer and donation call to action (CTA).
 
 It's been a minute since I've put a WordPress site together, but it all came back to me. Made sure to hit the three main breakpoints (mobile, table, desktop) which is always full of surprises, but overall this was a straightforward project that came together quickly. Especially helpful that the client came to me with a clear vision of what he wanted and all the content ready to go.
 
