Add scroll down text to parisi

--- a/data/blog/projects/anthony-parisi-site.mdx
+++ b/data/blog/projects/anthony-parisi-site.mdx
@@ -9,7 +9,7 @@ layout: PostLayout
 canonicalUrl:
 ---
 
-### **[View Site](https://parisi4da2023.com/)**
+### **[View Site](https://parisi4da2023.com/)** or scroll down to view
 
 #### &nbsp;
 
