Fix typo on Parisi post

--- a/data/blog/projects/anthony-parisi-site.mdx
+++ b/data/blog/projects/anthony-parisi-site.mdx
@@ -19,7 +19,7 @@ It's been a minute since I've put a WordPress site together, but it all came bac
 
 ### Quick overview:
 
-- Responsve custom WordPress site
+- Responsive custom WordPress site
 - Figma for design layout
 - Developed locally utilizing Docker container
 
