Update Licari post title

--- a/data/blog/projects/robin-licari-site.mdx
+++ b/data/blog/projects/robin-licari-site.mdx
@@ -1,5 +1,5 @@
 ---
-title: Robin Licari
+title: Robin Licari Custom WordPress Site
 date: '2023-07-11'
 tags: ['WordPress', 'project']
 draft: false
