Add preview images to Parisi and Gadsden posts

--- a/data/blog/projects/kenya-gadsden-site.mdx
+++ b/data/blog/projects/kenya-gadsden-site.mdx
@@ -13,6 +13,8 @@ canonicalUrl:
 
 #### &nbsp;
 
+![Kenya Gadsden Site](/static/images/projects/previews/gadsden-preview.png)
+
 I had the opportunity to build a custom WordPress site for a local candidate for Dutchess County Clerk. The main objectives were to showcase her priorities, provide an easy way to sign up to volunteer and donation call to action (CTA).
 
 We decided to utilitze a Wix site, so Kenya can easily manage the email list and send out newsletters. Overall, I think we achieved the goal of showing Kenya's warmth and determination to the local community.
